src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void TonemapReinhard_setIntensity_0(void* self, float intensity);
extern "C" __declspec(dllexport) float TonemapReinhard_getLightAdaptation_0(void* self);
extern "C" __declspec(dllexport) void TonemapReinhard_setLightAdaptation_0(void* self, float light_adapt);
extern "C" __declspec(dllexport) float TonemapReinhard_getColorAdaptation_0(void* self);
extern "C" __declspec(dllexport) void TonemapReinhard_setColorAdaptation_0(void* self, float color_adapt);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_Delete(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_New_0();
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_New_1(void* src, int constColor);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_New_2(void* src, void* colors, int refColorSpace);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_New_3(void* src, void* colors, int refColorSpace, void* coloredPatchesMask);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setColorSpace_0(void* self, int cs);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setCcmType_0(void* self, int ccmType);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setDistance_0(void* self, int distance);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setLinearization_0(void* self, int linearizationType);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setLinearizationGamma_0(void* self, double gamma);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setLinearizationDegree_0(void* self, int deg);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setSaturatedThreshold_0(void* self, double lower, double upper);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setWeightsList_0(void* self, void* weightsList);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setWeightCoeff_0(void* self, double weightsCoeff);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setInitialMethod_0(void* self, int initialMethodType);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setMaxCount_0(void* self, int maxCount);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setEpsilon_0(void* self, double epsilon);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_setRGB_0(void* self, bool rgb);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_compute_0(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_getColorCorrectionMatrix_0(void* self);
extern "C" __declspec(dllexport) double ccm_ColorCorrectionModel_getLoss_0(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_getSrcLinearRGB_0(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_getRefLinearRGB_0(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_getMask_0(void* self);
extern "C" __declspec(dllexport) void* ccm_ColorCorrectionModel_getWeights_0(void* self);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_correctImage_0(void* self, void* src, void* dst, bool islinear);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_write_0(void* self, void* fs);
extern "C" __declspec(dllexport) void ccm_ColorCorrectionModel_read_0(void* self, void* node);
extern "C" __declspec(dllexport) void segmentation_IntelligentScissorsMB_Delete(void* self);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_New_0();
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_setWeights_0(void* self, float weight_non_edge, float weight_gradient_direction, float weight_gradient_magnitude);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_setGradientMagnitudeMaxLimit_0(void* self, float gradient_magnitude_threshold_max);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_setEdgeFeatureZeroCrossingParameters_0(void* self, float gradient_magnitude_min_value);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_setEdgeFeatureCannyParameters_0(void* self, double threshold1, double threshold2, int apertureSize, bool L2gradient);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_applyImage_0(void* self, void* image);
extern "C" __declspec(dllexport) void* segmentation_IntelligentScissorsMB_applyImageFeatures_0(void* self, void* non_edge, void* gradient_direction, void* gradient_magnitude, void* image);
extern "C" __declspec(dllexport) void segmentation_IntelligentScissorsMB_buildMap_0(void* self, cv::Point sourcePt);
extern "C" __declspec(dllexport) void segmentation_IntelligentScissorsMB_getContour_0(void* self, cv::Point targetPt, void* contour, bool backward);
extern "C" __declspec(dllexport) void cv_inpaint_0(void* src, void* inpaintMask, void* dst, double inpaintRadius, int flags);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoising_0(void* src, void* dst, float h, int templateWindowSize, int searchWindowSize);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoising_1(void* src, void* dst, void* h, int templateWindowSize, int searchWindowSize, int normType);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoisingColored_0(void* src, void* dst, float h, float hColor, int templateWindowSize, int searchWindowSize);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoisingMulti_0(void* srcImgs, void* dst, int imgToDenoiseIndex, int temporalWindowSize, float h, int templateWindowSize, int searchWindowSize);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoisingMulti_1(void* srcImgs, void* dst, int imgToDenoiseIndex, int temporalWindowSize, void* h, int templateWindowSize, int searchWindowSize, int normType);
extern "C" __declspec(dllexport) void cv_fastNlMeansDenoisingColoredMulti_0(void* srcImgs, void* dst, int imgToDenoiseIndex, int temporalWindowSize, float h, float hColor, int templateWindowSize, int searchWindowSize);
extern "C" __declspec(dllexport) void cv_denoise_TVL1_0(void* observations, void* result, double lambda, int niters);
extern "C" __declspec(dllexport) void* cv_createTonemap_0(float gamma);
extern "C" __declspec(dllexport) void* cv_createTonemapDrago_0(float gamma, float saturation, float bias);