src/OpenCV5Sharp/Generated/NativeMethods.Photo.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapReinhard_setIntensity_0(TonemapReinhardHandle self, float intensity);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapReinhard_getLightAdaptation_0(TonemapReinhardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapReinhard_setLightAdaptation_0(TonemapReinhardHandle self, float light_adapt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapReinhard_getColorAdaptation_0(TonemapReinhardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapReinhard_setColorAdaptation_0(TonemapReinhardHandle self, float color_adapt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_New_1(MatHandle src, int constColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_New_2(MatHandle src, MatHandle colors, int refColorSpace);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_New_3(MatHandle src, MatHandle colors, int refColorSpace, MatHandle coloredPatchesMask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setColorSpace_0(CcmColorCorrectionModelHandle self, int cs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setCcmType_0(CcmColorCorrectionModelHandle self, int ccmType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setDistance_0(CcmColorCorrectionModelHandle self, int distance);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setLinearization_0(CcmColorCorrectionModelHandle self, int linearizationType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setLinearizationGamma_0(CcmColorCorrectionModelHandle self, double gamma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setLinearizationDegree_0(CcmColorCorrectionModelHandle self, int deg);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setSaturatedThreshold_0(CcmColorCorrectionModelHandle self, double lower, double upper);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setWeightsList_0(CcmColorCorrectionModelHandle self, MatHandle weightsList);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setWeightCoeff_0(CcmColorCorrectionModelHandle self, double weightsCoeff);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setInitialMethod_0(CcmColorCorrectionModelHandle self, int initialMethodType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setMaxCount_0(CcmColorCorrectionModelHandle self, int maxCount);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setEpsilon_0(CcmColorCorrectionModelHandle self, double epsilon);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_setRGB_0(CcmColorCorrectionModelHandle self, [MarshalAs(UnmanagedType.U1)] bool rgb);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_compute_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_getColorCorrectionMatrix_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double ccm_ColorCorrectionModel_getLoss_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_getSrcLinearRGB_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_getRefLinearRGB_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_getMask_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ccm_ColorCorrectionModel_getWeights_0(CcmColorCorrectionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_correctImage_0(CcmColorCorrectionModelHandle self, MatHandle src, MatHandle dst, [MarshalAs(UnmanagedType.U1)] bool islinear);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_write_0(CcmColorCorrectionModelHandle self, FileStorageHandle fs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ccm_ColorCorrectionModel_read_0(CcmColorCorrectionModelHandle self, FileNodeHandle node);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void segmentation_IntelligentScissorsMB_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_setWeights_0(SegmentationIntelligentScissorsMBHandle self, float weight_non_edge, float weight_gradient_direction, float weight_gradient_magnitude);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_setGradientMagnitudeMaxLimit_0(SegmentationIntelligentScissorsMBHandle self, float gradient_magnitude_threshold_max);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_setEdgeFeatureZeroCrossingParameters_0(SegmentationIntelligentScissorsMBHandle self, float gradient_magnitude_min_value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_setEdgeFeatureCannyParameters_0(SegmentationIntelligentScissorsMBHandle self, double threshold1, double threshold2, int apertureSize, [MarshalAs(UnmanagedType.U1)] bool L2gradient);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_applyImage_0(SegmentationIntelligentScissorsMBHandle self, MatHandle image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr segmentation_IntelligentScissorsMB_applyImageFeatures_0(SegmentationIntelligentScissorsMBHandle self, MatHandle non_edge, MatHandle gradient_direction, MatHandle gradient_magnitude, IntPtr image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void segmentation_IntelligentScissorsMB_buildMap_0(SegmentationIntelligentScissorsMBHandle self, Point sourcePt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void segmentation_IntelligentScissorsMB_getContour_0(SegmentationIntelligentScissorsMBHandle self, Point targetPt, MatHandle contour, [MarshalAs(UnmanagedType.U1)] bool backward);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_inpaint_0(MatHandle src, MatHandle inpaintMask, MatHandle dst, double inpaintRadius, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoising_0(MatHandle src, MatHandle dst, float h, int templateWindowSize, int searchWindowSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoising_1(MatHandle src, MatHandle dst, IntPtr h, int templateWindowSize, int searchWindowSize, int normType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoisingColored_0(MatHandle src, MatHandle dst, float h, float hColor, int templateWindowSize, int searchWindowSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoisingMulti_0(IntPtr srcImgs, MatHandle dst, int imgToDenoiseIndex, int temporalWindowSize, float h, int templateWindowSize, int searchWindowSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoisingMulti_1(IntPtr srcImgs, MatHandle dst, int imgToDenoiseIndex, int temporalWindowSize, IntPtr h, int templateWindowSize, int searchWindowSize, int normType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fastNlMeansDenoisingColoredMulti_0(IntPtr srcImgs, MatHandle dst, int imgToDenoiseIndex, int temporalWindowSize, float h, float hColor, int templateWindowSize, int searchWindowSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_denoise_TVL1_0(IntPtr observations, MatHandle result, double lambda, int niters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createTonemap_0(float gamma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createTonemapDrago_0(float gamma, float saturation, float bias);
